--- a/style.css
+++ b/style.css
@@ -1,9 +1,24 @@
-.header {
-color:#0eedc4;
-font-size: 24px;	
+.h1 {
+color:#993f2b;
+font-size: 66px;
+text-align: center;
 }
-.header2 {
-color:#0fb0f5	;
-font-size: 20px;
-
+.text {
+color:#000;
+text-decoration: underline;
+text-align: center;
+}
+.link {
+color:#000;
+font-size: 34px;
+}
+.link:hover {
+	color:#993f2b;
+	text-decoration: none;
+}
+.header {
+	width:960px;
+	background: #f2937e;
+	margin:auto;
+	padding:auto;
 }
