--- a/style.css
+++ b/style.css
@@ -1,24 +1,39 @@
+body {
+	height: 100vh;
+	
+}
+
+body::before {
+	content: "";
+	position: absolute;
+	top: 0;
+	width: 100%;
+	height: 100%;
+	background: url("killua.jpg");
+	background-size: cover;
+	background-repeat: no-repeat;
+}
+
 .h1 {
-color:#b04b35;
-font-size: 66px;
-text-align: center;
+	color:#7fffd4;
+	font-size: 66px;
+	text-align: center;
 }
 .text {
-color:#000;
-text-decoration: underline;
-text-align: center;
+	color:#7fffd4;
+	text-decoration: underline;
+	text-align: center;
 }
 .link {
-color:#000;
-font-size: 34px;
-margin-left: 20px;
+	color:#7fffd4;
+	font-size: 34px;
+	margin-left: 20px;
 }
 .link:hover {
 	color:#993f2b;
 	text-decoration: none;
 }
 .header {
-	background: #fca692;
 	margin: 100px auto;
 	padding: 15px 25px;
 	text-align: center;
@@ -33,6 +48,9 @@ margin-left: 20px;
 	width: 960px;
 	border: 2px solid #000;
 	border-radius: 100px;
+	position: relative;
+	z-index: 1;
+	color: #7fffd4;
 }
 .form__input {
 	width:400px;
@@ -51,7 +69,7 @@ margin-left: 20px;
 	border: 0;
 	font-size: 14px;
 	padding: 10px;
-	color: white;
+	color: #7fffd4;
 	display: block;
 	margin: auto;
 }
@@ -68,8 +86,8 @@ margin-left: 20px;
 	width: 200px;
 	margin: auto;
 	margin-bottom: 10px;
-    background: white;
-	color: #b04b35;
+    background: black;
+	color: #7fffd4;
 	border: 1px solid;
 	font-size: 14px;
 	padding: 10px 4px;	
